Change mobile nav toggle color to white

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -287,7 +287,7 @@ h6 {
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
-    color: var(--nav-color);
+    color: #fff;
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
